Graficas de Interpretabilida

--- a/Entrega3/Entrega3_Interpretabilidad.ipynb
+++ b/Entrega3/Entrega3_Interpretabilidad.ipynb
@@ -2389,7 +2389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "cc7f5ee3",
    "metadata": {},
    "outputs": [
@@ -2637,11 +2637,75 @@
       "\n",
       "✅ SUPPORT VECTOR MACHINE COMPLETADO\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \u001b[35m\"/Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/multiprocessing/resource_tracker.py\"\u001b[0m, line \u001b[35m295\u001b[0m, in \u001b[35mmain\u001b[0m\n",
+      "    raise ValueError(\n",
+      "        f'Cannot register {name} for automatic cleanup: '\n",
+      "        f'unknown resource type {rtype}')\n",
+      "\u001b[1;35mValueError\u001b[0m: \u001b[35mCannot register /loky-15513-oas502oj for automatic cleanup: unknown resource type semlock\u001b[0m\n",
+      "Traceback (most recent call last):\n",
+      "  File \u001b[35m\"/Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/multiprocessing/resource_tracker.py\"\u001b[0m, line \u001b[35m295\u001b[0m, in \u001b[35mmain\u001b[0m\n",
+      "    raise ValueError(\n",
+      "        f'Cannot register {name} for automatic cleanup: '\n",
+      "        f'unknown resource type {rtype}')\n",
+      "\u001b[1;35mValueError\u001b[0m: \u001b[35mCannot register /loky-15513-vcy6b_b3 for automatic cleanup: unknown resource type semlock\u001b[0m\n",
+      "Traceback (most recent call last):\n",
+      "  File \u001b[35m\"/Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/multiprocessing/resource_tracker.py\"\u001b[0m, line \u001b[35m295\u001b[0m, in \u001b[35mmain\u001b[0m\n",
+      "    raise ValueError(\n",
+      "        f'Cannot register {name} for automatic cleanup: '\n",
+      "        f'unknown resource type {rtype}')\n",
+      "\u001b[1;35mValueError\u001b[0m: \u001b[35mCannot register /loky-15513-bhos7q4w for automatic cleanup: unknown resource type semlock\u001b[0m\n",
+      "Traceback (most recent call last):\n",
+      "  File \u001b[35m\"/Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/multiprocessing/resource_tracker.py\"\u001b[0m, line \u001b[35m295\u001b[0m, in \u001b[35mmain\u001b[0m\n",
+      "    raise ValueError(\n",
+      "        f'Cannot register {name} for automatic cleanup: '\n",
+      "        f'unknown resource type {rtype}')\n",
+      "\u001b[1;35mValueError\u001b[0m: \u001b[35mCannot register /loky-15513-3so9rlju for automatic cleanup: unknown resource type semlock\u001b[0m\n",
+      "Traceback (most recent call last):\n",
+      "  File \u001b[35m\"/Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/multiprocessing/resource_tracker.py\"\u001b[0m, line \u001b[35m295\u001b[0m, in \u001b[35mmain\u001b[0m\n",
+      "    raise ValueError(\n",
+      "        f'Cannot register {name} for automatic cleanup: '\n",
+      "        f'unknown resource type {rtype}')\n",
+      "\u001b[1;35mValueError\u001b[0m: \u001b[35mCannot register /loky-15513-um0v6ly3 for automatic cleanup: unknown resource type semlock\u001b[0m\n",
+      "Traceback (most recent call last):\n",
+      "  File \u001b[35m\"/Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/multiprocessing/resource_tracker.py\"\u001b[0m, line \u001b[35m295\u001b[0m, in \u001b[35mmain\u001b[0m\n",
+      "    raise ValueError(\n",
+      "        f'Cannot register {name} for automatic cleanup: '\n",
+      "        f'unknown resource type {rtype}')\n",
+      "\u001b[1;35mValueError\u001b[0m: \u001b[35mCannot register /loky-15513-a0ixxqu3 for automatic cleanup: unknown resource type semlock\u001b[0m\n",
+      "Traceback (most recent call last):\n",
+      "  File \u001b[35m\"/Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/multiprocessing/resource_tracker.py\"\u001b[0m, line \u001b[35m295\u001b[0m, in \u001b[35mmain\u001b[0m\n",
+      "    raise ValueError(\n",
+      "        f'Cannot register {name} for automatic cleanup: '\n",
+      "        f'unknown resource type {rtype}')\n",
+      "\u001b[1;35mValueError\u001b[0m: \u001b[35mCannot register /loky-15513-igjngelx for automatic cleanup: unknown resource type semlock\u001b[0m\n",
+      "Traceback (most recent call last):\n",
+      "  File \u001b[35m\"/Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/multiprocessing/resource_tracker.py\"\u001b[0m, line \u001b[35m295\u001b[0m, in \u001b[35mmain\u001b[0m\n",
+      "    raise ValueError(\n",
+      "        f'Cannot register {name} for automatic cleanup: '\n",
+      "        f'unknown resource type {rtype}')\n",
+      "\u001b[1;35mValueError\u001b[0m: \u001b[35mCannot register /loky-15513-uz86fzv4 for automatic cleanup: unknown resource type semlock\u001b[0m\n",
+      "Traceback (most recent call last):\n",
+      "  File \u001b[35m\"/Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/multiprocessing/resource_tracker.py\"\u001b[0m, line \u001b[35m295\u001b[0m, in \u001b[35mmain\u001b[0m\n",
+      "    raise ValueError(\n",
+      "        f'Cannot register {name} for automatic cleanup: '\n",
+      "        f'unknown resource type {rtype}')\n",
+      "\u001b[1;35mValueError\u001b[0m: \u001b[35mCannot register /loky-15513-ut3ye38y for automatic cleanup: unknown resource type semlock\u001b[0m\n",
+      "Traceback (most recent call last):\n",
+      "  File \u001b[35m\"/Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/multiprocessing/resource_tracker.py\"\u001b[0m, line \u001b[35m295\u001b[0m, in \u001b[35mmain\u001b[0m\n",
+      "    raise ValueError(\n",
+      "        f'Cannot register {name} for automatic cleanup: '\n",
+      "        f'unknown resource type {rtype}')\n",
+      "\u001b[1;35mValueError\u001b[0m: \u001b[35mCannot register /loky-15513-yrqr005c for automatic cleanup: unknown resource type semlock\u001b[0m\n"
+     ]
     }
    ],
    "source": [
-    "# ...existing code...\n",
-    "\n",
     "# ================================\n",
     "# SUPPORT VECTOR MACHINE (SVM)\n",
     "# ================================\n",
@@ -3002,8 +3066,7 @@
     "    print(f\"🔴 Rendimiento del modelo SVM mejorable\")\n",
     "\n",
     "print(f\"\\n✅ SUPPORT VECTOR MACHINE COMPLETADO\")\n",
-    "\n",
-    "# ...existing code..."
+    "\n"
    ]
   }
  ],
