--- a/Entrega3/svm.ipynb
+++ b/Entrega3/svm.ipynb
@@ -1985,7 +1985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "60c881e2",
    "metadata": {},
    "outputs": [
@@ -2075,7 +2075,13 @@
       "    raise ValueError(\n",
       "        f'Cannot register {name} for automatic cleanup: '\n",
       "        f'unknown resource type {rtype}')\n",
-      "\u001b[1;35mValueError\u001b[0m: \u001b[35mCannot register /loky-18109-t6hmvu7_ for automatic cleanup: unknown resource type semlock\u001b[0m\n"
+      "\u001b[1;35mValueError\u001b[0m: \u001b[35mCannot register /loky-18109-t6hmvu7_ for automatic cleanup: unknown resource type semlock\u001b[0m\n",
+      "Traceback (most recent call last):\n",
+      "  File \u001b[35m\"/Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/multiprocessing/resource_tracker.py\"\u001b[0m, line \u001b[35m295\u001b[0m, in \u001b[35mmain\u001b[0m\n",
+      "    raise ValueError(\n",
+      "        f'Cannot register {name} for automatic cleanup: '\n",
+      "        f'unknown resource type {rtype}')\n",
+      "\u001b[1;35mValueError\u001b[0m: \u001b[35mCannot register /loky-18109-kgqttxi4 for automatic cleanup: unknown resource type semlock\u001b[0m\n"
      ]
     }
    ],
