algunos errores coregidos

--- a/Entrega4/05_Fairness.ipynb
+++ b/Entrega4/05_Fairness.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 1,
    "id": "84b312dd",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 2,
    "id": "d6b1896c",
    "metadata": {},
    "outputs": [
@@ -45,14 +45,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\gerar\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\sklearn\\preprocessing\\_encoders.py:246: UserWarning:\n",
-      "\n",
-      "Found unknown categories in columns [10, 11] during transform. These unknown categories will be encoded as all zeros\n",
-      "\n",
-      "c:\\Users\\gerar\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\sklearn\\preprocessing\\_encoders.py:246: UserWarning:\n",
-      "\n",
-      "Found unknown categories in columns [10] during transform. These unknown categories will be encoded as all zeros\n",
-      "\n"
+      "c:\\Users\\gerar\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\sklearn\\base.py:442: InconsistentVersionWarning: Trying to unpickle estimator DecisionTreeClassifier from version 1.7.1 when using version 1.7.2. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\gerar\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\sklearn\\base.py:442: InconsistentVersionWarning: Trying to unpickle estimator RandomForestClassifier from version 1.7.1 when using version 1.7.2. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\gerar\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\sklearn\\preprocessing\\_encoders.py:246: UserWarning: Found unknown categories in columns [10, 11] during transform. These unknown categories will be encoded as all zeros\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\gerar\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\sklearn\\preprocessing\\_encoders.py:246: UserWarning: Found unknown categories in columns [10] during transform. These unknown categories will be encoded as all zeros\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
@@ -142,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 3,
    "id": "a96d1cb1",
    "metadata": {},
    "outputs": [
@@ -1043,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 4,
    "id": "d2991710",
    "metadata": {},
    "outputs": [
@@ -1927,7 +1929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 5,
    "id": "dc757e53",
    "metadata": {},
    "outputs": [
@@ -4455,7 +4457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 6,
    "id": "44722b4c",
    "metadata": {},
    "outputs": [
@@ -4520,7 +4522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 7,
    "id": "a8c5a758",
    "metadata": {},
    "outputs": [
@@ -4535,8 +4537,8 @@
       "2        Clase: 1  0.89  0.14       0.92      0.63\n",
       "3        Clase: 2  0.90  0.12       0.90      0.54\n",
       "4        Clase: 3  0.52  0.11       0.55      0.20\n",
-      "5    Edad: Adulto  0.73  0.13       0.77      0.36\n",
-      "6     Edad: Menor  1.00  0.06       0.92      0.45\n"
+      "5    Edad: Adulto  0.75  0.12       0.79      0.35\n",
+      "6     Edad: Menor  1.00  0.09       0.90      0.50\n"
      ]
     }
    ],
@@ -4549,7 +4551,7 @@
     "grupos = {\n",
     "    'Género': X_val_rf['Sex'],\n",
     "    'Clase': X_val_rf['Pclass'],\n",
-    "    'Edad': (X_val_rf['Age'] < 18).map({True: 'Menor', False: 'Adulto'})\n",
+    "    'Edad': (X_val_rf['Age'] < 16).map({True: 'Menor', False: 'Adulto'})\n",
     "}\n",
     "\n",
     "# Inicializar lista para la tabla\n",
@@ -4579,7 +4581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 8,
    "id": "78da9993",
    "metadata": {},
    "outputs": [
@@ -4621,7 +4623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 9,
    "id": "8eac41f2",
    "metadata": {},
    "outputs": [
@@ -4655,7 +4657,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\gerar\\AppData\\Local\\Temp\\ipykernel_11960\\3390872915.py:25: RuntimeWarning:\n",
+      "C:\\Users\\gerar\\AppData\\Local\\Temp\\ipykernel_4044\\3390872915.py:25: RuntimeWarning:\n",
       "\n",
       "Mean of empty slice.\n",
       "\n",
@@ -4663,7 +4665,7 @@
       "\n",
       "invalid value encountered in scalar divide\n",
       "\n",
-      "C:\\Users\\gerar\\AppData\\Local\\Temp\\ipykernel_11960\\3390872915.py:34: RuntimeWarning:\n",
+      "C:\\Users\\gerar\\AppData\\Local\\Temp\\ipykernel_4044\\3390872915.py:34: RuntimeWarning:\n",
       "\n",
       "Mean of empty slice.\n",
       "\n"
