repo final falta ingresar el paper a la carpeta

--- a/notebooks/03_Modeling.ipynb
+++ b/notebooks/03_Modeling.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "7c967fb3",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "3f37beb7",
    "metadata": {},
    "outputs": [
@@ -71,7 +71,7 @@
    ],
    "source": [
     "# Carga del dataset\n",
-    "data_path = Path(\"../Entrega2/data/\")\n",
+    "data_path = Path(\"../data/\")\n",
     "df = pd.read_csv(data_path / \"Titanic_Dataset_Featured.csv\")\n",
     "\n",
     "print(f\"✅ Dataset cargado exitosamente\")\n",
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "372a4ef2",
    "metadata": {},
    "outputs": [
@@ -841,12 +841,11 @@
     "    \n",
     "    def _save_results(self):\n",
     "        \"\"\"Guardar modelo y resultados\"\"\"\n",
-    "        os.makedirs('models', exist_ok=True)\n",
     "        \n",
-    "        model_path = f\"models/{self.model_name.lower()}_model.pkl\"\n",
+    "        model_path = f\"../models/{self.model_name.lower()}_model.pkl\"\n",
     "        joblib.dump(self.best_model, model_path)\n",
     "        \n",
-    "        results_path = f\"models/{self.model_name.lower()}_results.pkl\"\n",
+    "        results_path = f\"../models/{self.model_name.lower()}_results.pkl\"\n",
     "        joblib.dump(self.results, results_path)\n",
     "        \n",
     "        self.results['model_path'] = model_path\n",
@@ -876,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "b9ad9fe0",
    "metadata": {},
    "outputs": [],
@@ -1092,10 +1091,9 @@
     "        print(f\"   STD media de importancia: {np.mean(std_importance):.4f}\")\n",
     "\n",
     "    def _save_results(self):\n",
-    "        os.makedirs('models', exist_ok=True)\n",
-    "        model_path = f\"models/{self.model_name.lower()}_model2.pkl\"\n",
+    "        model_path = f\"../models/{self.model_name.lower()}_model.pkl\"\n",
     "        joblib.dump(self.best_model, model_path)\n",
-    "        results_path = f\"models/{self.model_name.lower()}_results2.pkl\"\n",
+    "        results_path = f\"../models/{self.model_name.lower()}_results.pkl\"\n",
     "        joblib.dump(self.results, results_path)\n",
     "        self.results['model_path'] = model_path\n",
     "        self.results['results_path'] = results_path\n",
@@ -1716,14 +1714,11 @@
     "    def _save_results(self):\n",
     "        \"\"\"Guardar modelo y resultados\"\"\"\n",
     "        # Crear directorio si no existe\n",
-    "        os.makedirs('models', exist_ok=True)\n",
     "        \n",
-    "        # Guardar modelo\n",
-    "        model_path = f\"models/{self.model_name.lower()}_model.pkl\"\n",
+    "        model_path = f\"../models/{self.model_name.lower()}_model.pkl\"\n",
     "        joblib.dump(self.best_model, model_path)\n",
     "        \n",
-    "        # Guardar resultados\n",
-    "        results_path = f\"models/{self.model_name.lower()}_results.pkl\"\n",
+    "        results_path = f\"../models/{self.model_name.lower()}_results.pkl\"\n",
     "        joblib.dump(self.results, results_path)\n",
     "        \n",
     "        self.results['model_path'] = model_path\n",
@@ -2593,190 +2588,6 @@
     "print(f\"   • El modelo XGBoost trabajará con {len(feature_names_full)} features optimizadas\")\n",
     "print(f\"   • Las variables categóricas se manejan correctamente\")\n",
     "print(f\"   • El análisis de importancia será más interpretable\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "150bf5f7",
-   "metadata": {},
-   "source": [
-    "### 3.4 Support Vector Machine"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "b0fc17bb",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=== SUPPORT VECTOR MACHINE ===\n",
-      "Características:\n",
-      "- Separación no lineal con kernels\n",
-      "- Robusto en alta dimensionalidad\n",
-      "- Buena generalización\n",
-      "\n",
-      "Pendiente de implementación:\n",
-      "- Selección de kernel óptimo\n",
-      "- Escalado de features\n",
-      "- Optimización de hiperparámetros\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Implementación de SVM\n",
-    "print(\"=== SUPPORT VECTOR MACHINE ===\")\n",
-    "print(\"Características:\")\n",
-    "print(\"- Separación no lineal con kernels\")\n",
-    "print(\"- Robusto en alta dimensionalidad\")\n",
-    "print(\"- Buena generalización\")\n",
-    "print(\"\\nPendiente de implementación:\")\n",
-    "print(\"- Selección de kernel óptimo\")\n",
-    "print(\"- Escalado de features\")\n",
-    "print(\"- Optimización de hiperparámetros\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "302bdbb2",
-   "metadata": {},
-   "source": [
-    "## 4. Búsqueda de Hiperparámetros"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "af3d55e2",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=== HYPERPARAMETER OPTIMIZATION ===\n",
-      "Estrategias a implementar:\n",
-      "1. Grid Search para espacios pequeños\n",
-      "2. Random Search para espacios grandes\n",
-      "3. Cross-validation estratificada\n",
-      "4. Métricas de evaluación múltiples\n",
-      "\n",
-      "Pendiente de implementación:\n",
-      "- Definición de grids de parámetros\n",
-      "- Búsqueda sistemática\n",
-      "- Validación de resultados\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Framework para búsqueda de hiperparámetros\n",
-    "print(\"=== HYPERPARAMETER OPTIMIZATION ===\")\n",
-    "print(\"Estrategias a implementar:\")\n",
-    "print(\"1. Grid Search para espacios pequeños\")\n",
-    "print(\"2. Random Search para espacios grandes\")\n",
-    "print(\"3. Cross-validation estratificada\")\n",
-    "print(\"4. Métricas de evaluación múltiples\")\n",
-    "print(\"\\nPendiente de implementación:\")\n",
-    "print(\"- Definición de grids de parámetros\")\n",
-    "print(\"- Búsqueda sistemática\")\n",
-    "print(\"- Validación de resultados\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "398da733",
-   "metadata": {},
-   "source": [
-    "## 5. Evaluación Comparativa"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "cd98fb68",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=== MODEL EVALUATION ===\n",
-      "Métricas a calcular:\n",
-      "- Accuracy, Precision, Recall, F1-score\n",
-      "- ROC AUC y curvas ROC\n",
-      "- Matriz de confusión\n",
-      "- Cross-validation scores\n",
-      "\n",
-      "Visualizaciones a generar:\n",
-      "- Comparación de métricas\n",
-      "- Curvas de aprendizaje\n",
-      "- Feature importance comparativa\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Framework de evaluación\n",
-    "print(\"=== MODEL EVALUATION ===\")\n",
-    "print(\"Métricas a calcular:\")\n",
-    "print(\"- Accuracy, Precision, Recall, F1-score\")\n",
-    "print(\"- ROC AUC y curvas ROC\")\n",
-    "print(\"- Matriz de confusión\")\n",
-    "print(\"- Cross-validation scores\")\n",
-    "print(\"\\nVisualizaciones a generar:\")\n",
-    "print(\"- Comparación de métricas\")\n",
-    "print(\"- Curvas de aprendizaje\")\n",
-    "print(\"- Feature importance comparativa\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9dbb64ca",
-   "metadata": {},
-   "source": [
-    "## 6. Selección del Modelo Final"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "2ac5dfdd",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=== FINAL MODEL SELECTION ===\n",
-      "Criterios de selección:\n",
-      "1. Performance en validation set\n",
-      "2. Estabilidad en cross-validation\n",
-      "3. Interpretabilidad\n",
-      "4. Tiempo de entrenamiento/predicción\n",
-      "\n",
-      "Pendiente de implementación:\n",
-      "- Comparación final de modelos\n",
-      "- Selección del mejor modelo\n",
-      "- Serialización para producción\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Selección y serialización del modelo final\n",
-    "import joblib\n",
-    "\n",
-    "print(\"=== FINAL MODEL SELECTION ===\")\n",
-    "print(\"Criterios de selección:\")\n",
-    "print(\"1. Performance en validation set\")\n",
-    "print(\"2. Estabilidad en cross-validation\")\n",
-    "print(\"3. Interpretabilidad\")\n",
-    "print(\"4. Tiempo de entrenamiento/predicción\")\n",
-    "print(\"\\nPendiente de implementación:\")\n",
-    "print(\"- Comparación final de modelos\")\n",
-    "print(\"- Selección del mejor modelo\")\n",
-    "print(\"- Serialización para producción\")"
    ]
   },
   {
