--- a/notebooks/04_Interpretability.ipynb
+++ b/notebooks/04_Interpretability.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 7,
    "id": "53e94197",
    "metadata": {},
    "outputs": [
@@ -67,7 +67,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 17,
+   "id": "b097c4bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🔄 CARGANDO MODELO Y DATOS DESDE MODELADO (Logistic Regression)\n",
+      "==================================================\n",
+      "✅ Modelo Logistic Regression cargado desde archivo\n",
+      "✅ Dataset cargado: (891, 36)\n",
+      "✅ Datos procesados:\n",
+      "   - Train: (534, 89)\n",
+      "   - Validation: (178, 89)\n",
+      "   - Test: (179, 89)\n",
+      "✅ Predicciones generadas para validación y test\n",
+      "\n",
+      "🎯 DATOS LISTOS PARA ANÁLISIS DE INTERPRETABILIDAD (Logistic Regression)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Cargar modelo y datos del notebook de modelado (Logistic Regression)\n",
+    "print(\"🔄 CARGANDO MODELO Y DATOS DESDE MODELADO (Logistic Regression)\")\n",
+    "print(\"=\"*50)\n",
+    "\n",
+    "try:\n",
+    "    # Cargar el modelo entrenado\n",
+    "    if os.path.exists(\"../models/logisticregression_model.pkl\"):\n",
+    "        modelo_lr = joblib.load(\"../models/logisticregression_model.pkl\")\n",
+    "        print(\"✅ Modelo Logistic Regression cargado desde archivo\")\n",
+    "    else:\n",
+    "        print(\"⚠️ Archivo del modelo no encontrado. Ejecutar primero el notebook de modelado.\")\n",
+    "        modelo_lr = None\n",
+    "    \n",
+    "    # Cargar datos originales\n",
+    "    data_path = Path(\"../data/\")\n",
+    "    df = pd.read_csv(data_path / \"Titanic_Dataset_Featured.csv\")\n",
+    "    print(f\"✅ Dataset cargado: {df.shape}\")\n",
+    "    \n",
+    "    # Recrear el preprocessing (mismo que en modelado)\n",
+    "    from sklearn.model_selection import train_test_split\n",
+    "    from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
+    "    from sklearn.compose import ColumnTransformer\n",
+    "    \n",
+    "    # Separar features y target\n",
+    "    X = df.drop('Survived', axis=1)\n",
+    "    y = df['Survived']\n",
+    "    \n",
+    "    # Filtrar variables problemáticas\n",
+    "    numeric_features = X.select_dtypes(include=['int64', 'float64']).columns.tolist()\n",
+    "    all_categorical = X.select_dtypes(include=['object']).columns.tolist()\n",
+    "    variables_excluir = ['Name', 'Ticket', 'Cabin', 'PassengerId']\n",
+    "    categorical_features = [col for col in all_categorical if col not in variables_excluir]\n",
+    "    \n",
+    "    if 'PassengerId' in numeric_features:\n",
+    "        numeric_features.remove('PassengerId')\n",
+    "    \n",
+    "    # Filtrar datos\n",
+    "    features_seleccionadas = numeric_features + categorical_features\n",
+    "    X = X[features_seleccionadas]\n",
+    "    \n",
+    "    # Crear preprocessor\n",
+    "    preprocessor = ColumnTransformer(\n",
+    "        transformers=[\n",
+    "            ('num', StandardScaler(), numeric_features),\n",
+    "            ('cat', OneHotEncoder(drop='first', handle_unknown='ignore'), categorical_features)\n",
+    "        ]\n",
+    "    )\n",
+    "    \n",
+    "    # División de datos (misma semilla que en modelado)\n",
+    "    X_train, X_temp, y_train, y_temp = train_test_split(\n",
+    "        X, y, test_size=0.4, random_state=42, stratify=y\n",
+    "    )\n",
+    "    X_val, X_test, y_val, y_test = train_test_split(\n",
+    "        X_temp, y_temp, test_size=0.5, random_state=42, stratify=y_temp\n",
+    "    )\n",
+    "    \n",
+    "    # Aplicar preprocessing\n",
+    "    X_train_processed = preprocessor.fit_transform(X_train)\n",
+    "    X_val_processed = preprocessor.transform(X_val)\n",
+    "    X_test_processed = preprocessor.transform(X_test)\n",
+    "    \n",
+    "    print(f\"✅ Datos procesados:\")\n",
+    "    print(f\"   - Train: {X_train_processed.shape}\")\n",
+    "    print(f\"   - Validation: {X_val_processed.shape}\")\n",
+    "    print(f\"   - Test: {X_test_processed.shape}\")\n",
+    "    \n",
+    "    # Generar predicciones si el modelo está disponible\n",
+    "    if modelo_lr is not None:\n",
+    "        lr_y_pred_val = modelo_lr.predict(X_val_processed)\n",
+    "        lr_y_pred_proba_val = modelo_lr.predict_proba(X_val_processed)[:, 1]\n",
+    "        \n",
+    "        lr_y_pred_test = modelo_lr.predict(X_test_processed)\n",
+    "        lr_y_pred_proba_test = modelo_lr.predict_proba(X_test_processed)[:, 1]\n",
+    "        \n",
+    "        print(\"✅ Predicciones generadas para validación y test\")\n",
+    "    \n",
+    "    print(\"\\n🎯 DATOS LISTOS PARA ANÁLISIS DE INTERPRETABILIDAD (Logistic Regression)\")\n",
+    "    \n",
+    "except Exception as e:\n",
+    "    print(f\"❌ Error al cargar datos: {str(e)}\")\n",
+    "    print(\"💡 Asegúrate de ejecutar primero el notebook de modelado\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "4f8178a4",
    "metadata": {},
    "outputs": [
@@ -173,7 +281,7 @@
     "\n",
     "try:\n",
     "    # Cargar modelo de Logistic Regression si existe\n",
-    "    lr_model_path = \"models/logisticregression_model.pkl\"\n",
+    "    lr_model_path = \"../models/logisticregression_model.pkl\"\n",
     "    if os.path.exists(lr_model_path):\n",
     "        lr_modelo = joblib.load(lr_model_path)\n",
     "        print(\"✅ Modelo Logistic Regression cargado desde archivo\")\n",
@@ -502,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "id": "63a3c655",
    "metadata": {},
    "outputs": [
@@ -531,15 +639,15 @@
     "\n",
     "try:\n",
     "    # Cargar el modelo entrenado\n",
-    "    if os.path.exists(\"models/xgboost_model.pkl\"):\n",
-    "        modelo = joblib.load(\"models/xgboost_model.pkl\")\n",
+    "    if os.path.exists(\"../models/xgboost_model.pkl\"):\n",
+    "        modelo = joblib.load(\"../models/xgboost_model.pkl\")\n",
     "        print(\"✅ Modelo XGBoost cargado desde archivo\")\n",
     "    else:\n",
     "        print(\"⚠️ Archivo del modelo no encontrado. Ejecutar primero el notebook de modelado.\")\n",
     "        modelo = None\n",
     "    \n",
     "    # Cargar datos originales\n",
-    "    data_path = Path(\"../Entrega2/data/\")\n",
+    "    data_path = Path(\"../data/\")\n",
     "    df = pd.read_csv(data_path / \"Titanic_Dataset_Featured.csv\")\n",
     "    print(f\"✅ Dataset cargado: {df.shape}\")\n",
     "    \n",
@@ -2094,7 +2202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "id": "32aec6ea",
    "metadata": {},
    "outputs": [
@@ -2122,15 +2230,15 @@
     "\n",
     "try:\n",
     "    # Cargar el modelo entrenado\n",
-    "    if os.path.exists(\"models/randomforest_model.pkl\"):\n",
-    "        modelo_rf = joblib.load(\"models/randomforest_model.pkl\")\n",
+    "    if os.path.exists(\"../models/randomforest_model.pkl\"):\n",
+    "        modelo_rf = joblib.load(\"../models/randomforest_model.pkl\")\n",
     "        print(\"✅ Modelo RandomForest cargado desde archivo\")\n",
     "    else:\n",
     "        print(\"⚠️ Archivo del modelo no encontrado. Ejecutar primero el notebook de modelado.\")\n",
     "        modelo_rf = None\n",
     "\n",
     "    # Cargar datos originales\n",
-    "    data_path_rf = Path(\"../Entrega2/data/\")\n",
+    "    data_path_rf = Path(\"../data/\")\n",
     "    df_rf = pd.read_csv(data_path_rf / \"Titanic_Dataset_Featured.csv\")\n",
     "    print(f\"✅ Dataset cargado: {df_rf.shape}\")\n",
     "\n",
@@ -3073,7 +3181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 20,
    "id": "cc7f5ee3",
    "metadata": {},
    "outputs": [
@@ -3099,7 +3207,7 @@
       "🔵 ENTRENANDO SVM BÁSICO\n",
       "----------------------------------------\n",
       "✅ SVM básico entrenado en 0.05 segundos\n",
-      "✅ Predicciones generadas en 0.0100 segundos\n",
+      "✅ Predicciones generadas en 0.0095 segundos\n",
       "\n",
       "📈 MÉTRICAS SVM BÁSICO (Validation Set):\n",
       "   • Accuracy: 0.8258\n",
@@ -3117,7 +3225,53 @@
       "🔍 Probando 45 combinaciones de hiperparámetros...\n",
       "⏳ Iniciando búsqueda de hiperparámetros...\n",
       "Fitting 5 folds for each of 45 candidates, totalling 225 fits\n",
-      "✅ GridSearchCV completado en 7.4 segundos!\n",
+      "✅ GridSearchCV completado en 7.6 segundos!\n",
+      "🏆 Mejor score de validación cruzada: 0.8586\n",
+      "🎯 Mejores parámetros: {'C': 1, 'gamma': 0.001, 'kernel': 'rbf'}\n",
+      "\n",
+      "🏆 TOP 5 MODELOS:\n",
+      "   1. Score: 0.8586 (±0.0122) - {'C': 1, 'gamma': 0.001, 'kernel': 'rbf'}\n",
+      "   2. Score: 0.8537 (±0.0286) - {'C': 10, 'gamma': 0.001, 'kernel': 'sigmoid'}\n",
+      "   3. Score: 0.8528 (±0.0269) - {'C': 1, 'gamma': 0.01, 'kernel': 'sigmoid'}\n",
+      "   4. Score: 0.8517 (±0.0089) - {'C': 1, 'gamma': 0.01, 'kernel': 'rbf'}\n",
+      "   5. Score: 0.8502 (±0.0091) - {'C': 1, 'gamma': 'scale', 'kernel': 'rbf'}\n",
+      "\n",
+      "🎯 EVALUANDO MEJOR MODELO SVM\n",
+      "----------------------------------------\n",
+      "🔥 Mejor modelo: SVC(C=1, gamma=0.001, probability=True, random_state=42)\n",
+      "\n",
+      "📊 MÉTRICAS MEJOR SVM (Validation Set):\n",
+      "   • Accuracy: 0.8258\n",
+      "   • Precision: 0.7761\n",
+      "   • Recall: 0.7647\n",
+      "   • F1-Score: 0.7704\n",
+      "   • ROC-AUC: 0.8779\n",
+      "   • PR-AUC: 0.8518\n",
+      "   • Matthews Corrcoef: 0.6302\n",
+      "   • Balanced Accuracy: 0.8142\n",
+      "   • Brier Score: 0.1255\n",
+      "\n",
+      "📈 MEJORA RESPECTO AL MODELO BÁSICO:\n",
+      "   • Accuracy: +0.0000\n",
+      "   • ROC-AUC: +0.0091\n",
+      "   • F1-Score: +0.0070\n",
+      "\n",
+      "🎯 EVALUACIÓN FINAL EN TEST SET\n",
+      "----------------------------------------\n",
+      "🏆 MÉTRICAS FINALES SVM (Test Set):\n",
+      "   • Accuracy: 0.8212\n",
+      "   • Precision: 0.8246\n",
+      "   • Recall: 0.6812\n",
+      "   • F1-Score: 0.7460\n",
+      "   • ROC-AUC: 0.8555\n",
+      "   • PR-AUC: 0.8075\n",
+      "   • Matthews Corrcoef: 0.6167\n",
+      "   • Balanced Accuracy: 0.7951\n",
+      "   • Brier Score: 0.1325\n",
+      "\n",
+      "📊 GENERANDO VISUALIZACIONES\n",
+      "----------------------------------------\n",
+      "✅ GridSearchCV completado en 7.6 segundos!\n",
       "🏆 Mejor score de validación cruzada: 0.8586\n",
       "🎯 Mejores parámetros: {'C': 1, 'gamma': 0.001, 'kernel': 'rbf'}\n",
       "\n",
@@ -3182,8 +3336,8 @@
       "\n",
       "💾 GUARDANDO MODELO SVM\n",
       "----------------------------------------\n",
-      "✅ Modelo SVM guardado en 'models/svm_model.pkl'\n",
-      "✅ Scaler SVM guardado en 'models/svm_scaler.pkl'\n",
+      "✅ Modelo SVM guardado en '../models/svm_model.pkl'\n",
+      "✅ Scaler SVM guardado en '../models/svm_scaler.pkl'\n",
       "\n",
       "📊 ACTUALIZANDO COMPARACIÓN DE MODELOS\n",
       "----------------------------------------\n",
@@ -3196,7 +3350,7 @@
       "🎯 ROC-AUC Test Set: 0.8555\n",
       "📈 Accuracy Test Set: 0.8212\n",
       "⚡ F1-Score Test Set: 0.7460\n",
-      "⏱️ Tiempo total entrenamiento: 7.4s\n",
+      "⏱️ Tiempo total entrenamiento: 7.6s\n",
       "🟢 Excelente rendimiento del modelo SVM\n",
       "\n",
       "✅ SUPPORT VECTOR MACHINE COMPLETADO\n"
@@ -3497,12 +3651,12 @@
     "print(\"-\" * 40)\n",
     "\n",
     "# Guardar modelo SVM\n",
-    "joblib.dump(best_svm, \"models/svm_model.pkl\")\n",
-    "print(\"✅ Modelo SVM guardado en 'models/svm_model.pkl'\")\n",
+    "joblib.dump(best_svm, \"../models/svm_model.pkl\")\n",
+    "print(\"✅ Modelo SVM guardado en '../models/svm_model.pkl'\")\n",
     "\n",
     "# Guardar scaler\n",
-    "joblib.dump(scaler_svm, \"models/svm_scaler.pkl\")\n",
-    "print(\"✅ Scaler SVM guardado en 'models/svm_scaler.pkl'\")\n",
+    "joblib.dump(scaler_svm, \"../models/svm_scaler.pkl\")\n",
+    "print(\"✅ Scaler SVM guardado en '../models/svm_scaler.pkl'\")\n",
     "\n",
     "# ================================\n",
     "# 7. ACTUALIZAR COMPARACIÓN FINAL\n",
