--- a/notebooks/05_Fairness.ipynb
+++ b/notebooks/05_Fairness.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "f23101d3",
+   "metadata": {},
+   "source": [
+    "# Análisis de Fairness"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "84b312dd",
@@ -20,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d6b1896c",
    "metadata": {},
    "outputs": [
@@ -64,15 +72,15 @@
     "\n",
     "try:\n",
     "    # Cargar el modelo entrenado\n",
-    "    if os.path.exists(\"../Entrega3/models/randomforest_model.pkl\"):\n",
-    "        modelo_rf = joblib.load(\"../Entrega3/models/randomforest_model.pkl\")\n",
+    "    if os.path.exists(\"../models/randomforest_model.pkl\"):\n",
+    "        modelo_rf = joblib.load(\"../models/randomforest_model.pkl\")\n",
     "        print(\"✅ Modelo RandomForest cargado desde archivo\")\n",
     "    else:\n",
     "        print(\"⚠️ Archivo del modelo no encontrado. Ejecutar primero el notebook de modelado.\")\n",
     "        modelo_rf = None\n",
     "\n",
     "    # Cargar datos originales\n",
-    "    data_path_rf = Path(\"../Entrega2/data/\")\n",
+    "    data_path_rf = Path(\"../data/\")\n",
     "    df_rf = pd.read_csv(data_path_rf / \"Titanic_Dataset_Featured.csv\")\n",
     "    print(f\"✅ Dataset cargado: {df_rf.shape}\")\n",
     "\n",
